correction class html et ccs udapt version tablette

--- a/css/media.css
+++ b/css/media.css
@@ -1,27 +1,28 @@
-
 /****** Media queries ***********/
 /* Medium devices (tablets, less/equal than 1024px) */
 @media (max-width: 1024px) {
-    .filter-bar{
-         
+    .filter {
         flex-direction: column;
         align-items: flex-start;
+        gap: 20px;
     }
-    
+   .filter .search-and-filter-title-font{
+          margin: 0;
+}
+        
     .hebergements-and-populaires {
         flex-direction: column;
     }
 
-    #hebergements , .populaires {
+    .hebergements {
+        width: 100%;
+    }
+
+    .populaires {
         width: 100%;
         margin-top: 50px;
     }
-   
-    .populaires-title i{
-        padding-left: 30%;}
-   
-    
-         
+
     .populaires-cards {
         display: flex;
         flex-direction: row;
@@ -29,116 +30,40 @@
     }
 
     .populaires-cards a {
-        width: 32%;
+        width: 30%;
     }
 
     .populaires-cards .card-title {
         font-size: 14px;
     }
 
-    /*.populaires-cards .card-subtitle {
+    .populaires-cards .card-subtitle {
         font-size: 13px;
     }
-    .card-activ {
-        filter: drop-shadow(0px 3px 15px rgba(0, 0, 0, 0.1));
-       width: 100%;
-       display: flex;
-       flex-direction: column;
-      }
-    .img-activ{
-    
-    height: 200px;}*/
-   .card-activ{
-    height: auto;
-} 
-    .img-activ {
+    .activities{
+        width: 100%;}
+        .activities-cards{
+        display: flex;
+        flex-direction: row;
+    }
+    .activities-cards a {
+       height: 270px;
+       
+}
+    .activities-cards img{
+        width: 100%;
         height: 200px;
-        width: 100%;
+        min-height: 200px;
+    }
+    .activities-cards .card-title{
+    font-size: 14px;}
+    .search-and-filter-title-font{
+        font-size: 16px;
+    }
+    .search-and-filter-title-font p{
+        font-size: 14px;
     }
 }
-
-/* Small devices (phones, less than 768px) */
-@media (max-width: 767.98px) {
-
-    .main-container {
-        padding: 0;
-    }
     
-    main {
-        padding: 0;
-        margin-top: 35px;
-    }
 
-    header {
-        flex-direction: column;
-        height: auto;
-        padding: 0;
-    }
 
-    .div-logo-h {
-        justify-content: center;
-        height: 79px;
-    }
-
-    .logo-h {
-        padding: 30px;
-        width: auto;
-        object-fit: contain;
-    }
-
-    nav {
-        width: 100%;
-        height: 36px;
-        gap: 0px;
-    }
-
-    .link-nav {
-        display: block;
-        width: 50%;
-        text-align: center;
-    }
-
-    .link-nav:hover{
-        border-top: none;
-        border-bottom: solid 2px var(--main-color);
-        color: var(--main-color);
-        margin-top: 6px;
-    }
-
-    .info {
-        padding: 0 20px;
-    }
-
-    .search-bar {
-        max-width: 335px;
-        align-self: center;
-    }
-
-    .btn-rechercher {
-        display: none;
-    }
-
-    .fa-magnifying-glass {
-        display: block;
-    }
-
-    .div-filters {
-        flex-wrap: wrap;
-        justify-content: space-between;
-    }
-
-    .filter {
-        width: 48%;
-        padding: 4px 0;
-    }
-
-    .span-filters {
-        font-size: 0.9rem;
-    }
-    #hebergements{
-         
-         flex-direction: column;
-         justify-content: center;
-    }
-    
-}
